--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "gh-pages": "^3.2.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,6 +46,6 @@
   },
   "homepage": "https://hyuntae94.github.io/shop",
   "devDependencies": {
-    "eslint-plugin-jest": "^24.4.0"
+    "eslint-plugin-jest": "^22.6.3"
   }
 }
